--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <li><%= link_to "Sign Up", new_user_registration_path %></li>
 
+      <% if user_signed_in? %>
+      <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+      <% else %>
+      <li><%= link_to "Log In", new_user_session_path %></li>
+      <% end %>
 <%= yield %>
 
 </body>
