--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <p class="alert"><%= alert %></p>
 
   <li><%= link_to "Sign Up", new_user_registration_path %></li>
-
+<li><%= link_to "Admin Sign In", new_admin_user_session_path %></li>
       <% if user_signed_in? %>
       <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
       <% else %>
